--- a/src/view/ViewFormularioAluno.form
+++ b/src/view/ViewFormularioAluno.form
@@ -5,6 +5,9 @@
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Formul&#xe1;rio de Inscri&#xe7;&#xe3;o"/>
   </Properties>
+  <AccessibilityProperties>
+    <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Formul&#xe1;rio de Inscri&#xe7;&#xe3;o de Alunos"/>
+  </AccessibilityProperties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
