--- a/src/view/ViewFormularioProfessor.form
+++ b/src/view/ViewFormularioProfessor.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Formul&#xe1;rio de Inscri&#xe7;&#xe3;o de Professores"/>
@@ -142,12 +142,12 @@
                           <Component id="txtDataNasc" min="-2" pref="106" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
                           <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="cbSexo" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="111" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="105" max="-2" attributes="0"/>
                           <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="txtCpf" max="32767" attributes="0"/>
+                          <Component id="txtCpf" pref="136" max="32767" attributes="0"/>
                       </Group>
                       <Component id="txtNome" alignment="0" max="32767" attributes="0"/>
                   </Group>
@@ -233,7 +233,7 @@
         <Component class="javax.swing.JFormattedTextField" name="txtDataNasc">
           <Properties>
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
-              <Format format="####-##-##" subtype="-1" type="5"/>
+              <Format format="####/##/##" subtype="-1" type="5"/>
             </Property>
           </Properties>
         </Component>
