--- a/src/view/ViewTelaPrincipal.form
+++ b/src/view/ViewTelaPrincipal.form
@@ -49,6 +49,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Remover"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuRemoverAlunoActionPerformed"/>
+                  </Events>
                 </MenuItem>
               </SubComponents>
             </Menu>
@@ -197,6 +200,9 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JDesktopPane" name="dskTeleInicial">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+      </AuxValues>
     </Component>
   </SubComponents>
 </Form>
